# cargo-cmake-vcpkg

./: .devcontainer.json  .gitignore  CMakeLists.txt  Cargo.toml  NOTES.adoc  README.adoc  environment.yml  lib-shared.cpp  lib.cpp  main.rs  vcpkg.json
